--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Profil Roblox</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(145deg, #f9f9f9, #e0e0e0);
+      text-align: center;
+      padding-top: 60px;
+    }
+    .card {
+      background: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      display: inline-block;
+      max-width: 350px;
+    }
+    img {
+      border-radius: 50%;
+      border: 3px solid #ccc;
+    }
+    h2 {
+      margin: 15px 0 5px;
+      font-size: 24px;
+    }
+    p {
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+    .btn {
+      background: #ff4747;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 8px;
+      display: block;
+      margin: 10px auto;
+      font-weight: bold;
+      width: 80%;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #d93030;
+    }
+    .btn.discord {
+      background: #5865F2;
+    }
+    .btn.discord:hover {
+      background: #4752c4;
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <!-- Avatar Roblox -->
+    <img src="https://www.roblox.com/headshot-thumbnail/image?userId=2250219039&width=420&height=420&format=png" alt="Avatar Roblox" width="150" height="150"/>
 
+    <!-- Nom d'utilisateur -->
+    <h2 id="roblox-username">Chargement...</h2>
+    <p>Profil Roblox officiel</p>
+
+    <!-- Bouton Ajouter sur Roblox -->
+    <a href="https://www.roblox.com/users/2250219039/profile" class="btn" target="_blank">
+      Ajouter sur Roblox
+    </a>
+
+    <!-- Bouton Discord (facultatif - remplace l’ID si tu veux l’activer) -->
+    <a href="https://discord.com/users/123456789012345678" class="btn discord" target="_blank" style="display: none;">
+      Ajouter sur Discord
+    </a>
+  </div>
+
+  <script>
+    // Charger le pseudo automatiquement via l’API Roblox
+    fetch('https://users.roblox.com/v1/users/2250219039')
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById('roblox-username').textContent = data.name;
+      })
+      .catch(() => {
+        document.getElementById('roblox-username').textContent = 'Nom indisponible';
+      });
+
+    // ⚙️ Activer ou désactiver le bouton Discord
+    const discordId = '123456789012345678'; // ← Mets ici son vrai ID Discord si tu veux activer le bouton
+
+    if (discordId && discordId !== '123456789012345678') {
+      const discordBtn = document.querySelector('.btn.discord');
+      discordBtn.href = `https://discord.com/users/${discordId}`;
+      discordBtn.style.display = 'block';
+    }
+  </script>
+</body>
+</html>
