--- a/index.html
+++ b/index.html
@@ -13,21 +13,23 @@
     }
     .card {
       background: white;
-      max-width: 350px;
+      max-width: 650px;
       margin: auto;
       padding: 30px;
       border-radius: 15px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
     }
     .card img {
-      width: 300px;
+      width: 600px;  /* Taille 2x plus grande */
       border-radius: 15px;
       margin-bottom: 20px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       user-select: none;
+      max-width: 100%; /* Pour que ça reste responsive */
+      height: auto;
     }
     h1 {
-      font-size: 28px;
+      font-size: 36px;
       margin-bottom: 10px;
       color: #333;
       user-select: none;
@@ -42,6 +44,7 @@
       text-decoration: none;
       transition: background-color 0.3s ease;
       user-select: none;
+      font-size: 18px;
     }
     .btn:hover {
       background: #d93030;
@@ -50,7 +53,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="https://static.wikia.nocookie.net/roblox/images/3/37/Evade_Title_Screen.png" alt="Roblox Evade" />
+    <img src="https://www.roblox.com/games/9872472334/Evade" alt="Roblox Evade" />
     <h1>SweetJustForYou</h1>
     <a href="https://www.roblox.com/users/2250219039/profile" target="_blank" class="btn">Ajouter sur Roblox</a>
   </div>
