--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Profil SweetJustForYou - Roblox Evade</title>
+  <title>SweetJustForYou - Roblox Evade Profile</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -18,21 +18,23 @@
       padding: 30px;
       border-radius: 15px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    }
-    .card img {
-      width: 600px;  /* Taille 2x plus grande */
-      border-radius: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       user-select: none;
-      max-width: 100%; /* Pour que ça reste responsive */
-      height: auto;
     }
     h1 {
       font-size: 36px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       color: #333;
       user-select: none;
+    }
+    p {
+      font-size: 18px;
+      color: #444;
+      margin-bottom: 30px;
+      line-height: 1.5;
+    }
+    a.link {
+      color: #ff4747;
+      text-decoration: underline;
     }
     .btn {
       display: inline-block;
@@ -43,8 +45,8 @@
       border-radius: 10px;
       text-decoration: none;
       transition: background-color 0.3s ease;
-      user-select: none;
       font-size: 18px;
+      user-select: none;
     }
     .btn:hover {
       background: #d93030;
@@ -53,9 +55,15 @@
 </head>
 <body>
   <div class="card">
-    <img src="images/ma-photo.jpg" alt="Ma photo" />
     <h1>SweetJustForYou</h1>
-    <a href="https://www.roblox.com/users/2250219039/profile" target="_blank" class="btn">Ajouter sur Roblox</a>
+    <p>
+      Hi! If you want to play with me, click the button below to add me.<br />
+      To chat and play together on Discord, join here:<br />
+      <a href="https://tomtom-11.github.io/SCRIPT/" target="_blank" class="link">
+        https://tomtom-11.github.io/SCRIPT/
+      </a>
+    </p>
+    <a href="https://www.roblox.com/users/2250219039/profile" target="_blank" class="btn">Add me on Roblox</a>
   </div>
 </body>
 </html>
